fix: news filter flex wrap

--- a/src/components/filter/styles.module.scss
+++ b/src/components/filter/styles.module.scss
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: flex-start;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .filterCategories {
